Add premium student dashboard and integrate with automated email system

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             margin-bottom: 1.5rem;
             background: linear-gradient(to right, #fff, #cbd5e1);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
         }
 
@@ -262,7 +263,7 @@
                 <!-- REPLACE THE HREF BELOW WITH YOUR ACTUAL GOOGLE FORM LINK -->
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSchk5FU2aTS2L_JmFXRxADzWko3mw0IJcOoUwQUSSW8sl80dQ/viewform"
                     class="btn btn-primary" id="form-link">Open Submission Form</a>
-                <a href="#how-it-works" class="btn btn-secondary">How it works</a>
+                <a href="dashboard.html" class="btn btn-secondary">View My Dashboard</a>
             </div>
 
             <div class="steps" id="how-it-works">
